Data Schema and JPA

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.katrikken.Application</mainClass>
+                    <mainClass>com.katrikken.gdpai.Application</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
